# ROS_Opencv_test

./: README.md
Camshift/: CMakeLists.txt  package.xml
Camshift _cam/: CMakeLists.txt  package.xml
Camshift _cam/src/: Camshift_cam.cpp  Camshift_camV1.cpp  Camshift_camV2.cpp  Camshift_camV3.cpp  findcircle.cpp
Camshift/src/: Camshift.cpp  Camshift_V2.cpp
Imageshow/: CMakeLists.txt  package.xml
Imageshow/src/: Imageshow.cpp
VideoCapture/: CMakeLists.txt  package.xml
VideoCapture/src/: VideoCapture V2.cpp  VideoCapture.cpp  VideoCaptureV3.cpp
VideoCapture_cam/: CMakeLists.txt  package.xml
VideoCapture_cam/src/: VideoCapture_cam.cpp
VideoWriter/: CMakeLists.txt  package.xml
VideoWriter/src/: VideoWriter.cpp  text.cpp
beginner_tutorials/: package.xml
faceshow/: CMakeLists.txt  package.xml
faceshow/src/: faceshow.cpp
found_ball/: CMakeLists.txt
found_ball/launch/: found_ball.launch
found_ball/src/: ball_tracking.cpp  copter_control.cpp  image_publisher.cpp
found_ball_gazebo/: CMakeLists.txt  package.xml
found_ball_gazebo/launch/: found_ball.launch
found_ball_gazebo/msg/: Ballinfo.msg
found_ball_gazebo/src/: ball_tracking.cpp
object_tracking/: CMakeLists.txt  package.xml
object_tracking/src/: object_tracking.cpp
peopledetect/: CMakeLists.txt  package.xml
peopledetect/src/: peopledetect.cpp
ros_erle_found_ball/: CMakeLists.txt  package.xml
ros_erle_found_ball/src/: ball_tracking.cpp  ros_erle_found_ball.cpp  ros_erle_found_ball_v1.cpp
