<?xml version="1.0"?>
<package>
  <name>VideoCapture_cam</name>
  <version>0.0.0</version>
  <description>The VideoCapture_cam package</description>

  <maintainer email="erle@todo.todo">erle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>opencv2</run_depend>

</package>
