<?xml version="1.0"?>
<package>
  <name>found_ball</name>
  <version>1.0.0</version>
  <description>The found_ball package</description>

  <maintainer email="jj7158761@gmail.com">WoodyLin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
